Arreglado el problema con los permisos estáticos, ahora los permisos dependen de cada sesión dependiendo del usuario.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Salir", "CerrarSesion", "Auth")</li>
+                    <li>@Html.ActionLink("Cerrar sesión", "CerrarSesion", "Auth")</li>
                 </ul>
             </div>
         </div>
