Fixes tras merge.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -17,30 +17,34 @@
             <div class="panel panel-default">
                 <div class="panel-heading"><h3>Buscar grupos</h3></div>
                 <div class="panel-body">
-                    <!-- Esta forma hace que la búsqueda aparezca como parte del URL. -->
-                    <form asp-controller="AsignarFormularios" asp-action="Index">
-                        <p>
-                            Nombre: <input type="text" name="SearchString">
-                            <input type="submit" value="Buscar" />
-                        </p>
-                    </form>
+                    
                     <!-- Esta forma también recarga la página, pero no muestra los criterios de busqueda en el URL. -->
-                        @using (Html.BeginForm())
-                        {
+                   @using (Html.BeginForm())
+                    {
                             
-                            <!-- Buscador -->
-                            <p>
-                                <label>Unidad Academica:</label> @Html.DropDownList("unidadAcademica", null, "<Seleccione Unidad Académica>",new { @class = "form-control"})
-
+                        <!-- Buscador -->
+                        <p>
+                            <div>
+                                <label>Unidad Academica:</label> @Html.DropDownList("unidadAcademica", null, "<Seleccione Unidad Académica>", new { @class = "form-control" })
+                            </div>
+                            <div>
                                 <label> Carreras: </label> @Html.DropDownList("nombreCarrera", null, "<Seleccione Carrera>", new { @class = "form-control" })
+                            </div>
+                            <div>
                                 <label> Cursos: </label> @Html.DropDownList("nombreCurso", null, "<Seleccione Curso>", new { @class = "form-control" })
-                                @* <label> Semestre: </label> @Html.DropDownList("semestre", null, "<Seleccione Semestre>", new { @class = "form-control" })*@
-                                @* <label> Año: </label> @Html.DropDownList("ano", null, "<Seleccione Año>", new { @class = "form-control" })<br />*@
+                            </div>
+                            @*<div>
+                                <label> Semestre: </label> @Html.DropDownList("semestre", null, "<Seleccione Semestre>", new { @class = "form-control" })
+                            </div>*@
+                            @*<div>
+                                <label> Año: </label> @Html.DropDownList("ano", null, "<Seleccione Año>", new { @class = "form-control" })<br />
+                            </div>*@
+                            <div>
                                 @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
-
                                 <input type="submit" value="Buscar" />
-                            </p>
-                        }
+                            </div>
+                        </p>
+                    }
 
                 </div>
             </div>
