Collapse funciona para multiples collapse dentro de el.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Details.cshtml
@@ -40,20 +40,20 @@
 
     <div class="panel-group" id="accordion1">
 
-        @foreach (var formulario in Model.Conformado_Item_Sec_Form.Take(2))
+        @foreach (var formulario in Model.Conformado_Item_Sec_Form.Take(1))
         {
 
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="accordion1" href="#collapseOne_@id_counter">
-                            @Html.DisplayFor(modelItem => formulario.NombreFormulario)
+                        <a data-toggle="collapse" data-parent="#accordion1" href="#collapseThree_@id_counter">
+                            @Html.DisplayFor(model => formulario.NombreFormulario)
                         </a>
                     </h4>
                 </div>
-                <div id="collapseOne_@id_counter" class="panel-collapse collapse">
+                <div id="collapseThree_@id_counter" class="panel-collapse collapse">
                     <div class="panel-body">
-                        
+
                         <div class="panel-group" id="accordion2_@id_counter">
 
                             @foreach (var seccion in Model.Conformado_Item_Sec_Form)
@@ -61,26 +61,22 @@
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="accordion2_@id_counter" href="#collapseTwo_@seccion_counter">
-                                                @Html.DisplayFor(modelItem => seccion.TituloSeccion)
+                                            <a data-toggle="collapse" data-parent="#accordion2_@id_counter" href="#collapseThreeOne_@seccion_counter">
+                                                @Html.DisplayFor(model => seccion.TituloSeccion)
                                             </a>
                                         </h4>
                                     </div>
-
-                                    <div id="#collapseTwo_@seccion_counter" class="panel-collapse collapse">
-                                        <div class="panel-body">
-                                            @Html.DisplayFor(modelItem => seccion.Item.TextoPregunta)
-                                        </div>
+                                    <div id="collapseThreeOne_@seccion_counter" class="panel-collapse collapse">
+                                        <div class="panel-body">@Html.DisplayFor(model => seccion.Item.TextoPregunta)</div>
                                     </div>
-                                </div>
-
+                                </div>                              
                                 seccion_counter++;
                             }
+                            </div>
 
-                        </div>
                     </div>
                 </div>
-            </div>
+            </div>  
 
             id_counter++;
         }
@@ -88,5 +84,56 @@
     </div>
 
 
+@*
+    @{int id_counter = 0; int seccion_counter = 0;}
 
+        <div class="panel-group" id="accordion1">
+
+            @foreach (var formulario in Model.Conformado_Item_Sec_Form.Take(2))
+            {
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="accordion1" href="#collapseOne_@id_counter">
+                                @Html.DisplayFor(modelItem => formulario.NombreFormulario)
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOne_@id_counter" class="panel-collapse collapse">
+                        <div class="panel-body">
+
+                            <div class="panel-group" id="accordion2_@id_counter">
+
+                                @foreach (var seccion in Model.Conformado_Item_Sec_Form)
+                                {
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <a data-toggle="collapse" data-parent="accordion2_@id_counter" href="#collapseTwo_@seccion_counter">
+                                                    @Html.DisplayFor(modelItem => seccion.TituloSeccion)
+                                                </a>
+                                            </h4>
+                                        </div>
+
+                                        <div id="#collapseTwo_@seccion_counter" class="panel-collapse collapse">
+                                            <div class="panel-body">
+                                                @Html.DisplayFor(modelItem => seccion.Item.TextoPregunta)
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    seccion_counter++;
+                                }
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                id_counter++;
+            }
+
+        </div>
+*@
 
