Cambios de pruebas para realizar la vista de asignar preguntas y secciones a un formulario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id=item.CodigoFormulario }) |*@
+                @Html.ActionLink("Edit", "Edit", new { id=item.CodigoFormulario }) |
                 @*@Html.ActionLink("Details", "Details", new { id=item.CodigoFormulario }) |*@
                 @*@Html.ActionLink("Delete", "Delete", new { id=item.CodigoFormulario })*@
             </td>
